Force forkCount=1 even when concurrency is set.

--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,17 @@
     <jenkins.version>1.466</jenkins.version>
     <jenkins-test-harness.version>1.466</jenkins-test-harness.version>
     <java.level>5</java.level>
-    <!-- jenkins-test-harness < 1.545 doesn't allow concurrent tests -->
-    <concurrency>1</concurrency>
   </properties>
 
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <!-- jenkins-test-harness < 1.545 doesn't support concurrent tests. -->
+          <forkCount>1</forkCount>
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-enforcer-plugin</artifactId>
         <executions>
