[64] add logic to handle pipeline jobs for build result scoring
BuildResult scoring always returned 0 for pipeline jobs, this
change hopefully supports both freestyle and pipeline jobs
by properly checking the class type

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,14 @@
       <artifactId>matrix-project</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-cps</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-job</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>5.12.0</version>
