Add workaround to prevent simultaneous builds from starting on the wrong node (#54)
* Add workaround to prevent simultaneous builds (#30)

* Add configurable toggle for workaround (#30)

* Make throttle time configurable (#30)

* Create SimultaneousBuildsWorkaroundTest.java (#30)

* Update logging in tests (#30)

* Initialize lastEvaluation with older value (#30)

* Disable unstable test (#30)

* Remove non-available translation files

* Migrate to JUnit 5

* Add test for default configure method

Was uncovered before.

* Update license info

---------

Co-authored-by: Michael Kriese <michael.kriese@visualon.de>

--- a/src/test/resources/configuration-as-code-test.yml
+++ b/src/test/resources/configuration-as-code-test.yml
@@ -2,6 +2,8 @@ unclassified:
   scoringLoadBalancer:
     enabled: false
     reportScoresEnabled: true
+    simultaneousBuildsWorkaroundEnabled: true
+    simultaneousBuildsWorkaroundThrottleTime: 2000
     scoringRuleList:
     - nodeLoadScoringRule:
         scale: 20
